--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-flow": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@typescript-eslint/typescript-estree": "^4.28.0",
     "argparse": "^2.0.1",
     "babel-core": "^6.26.3",
     "body-parser": "^1.19.0",
-    "esprima": "^4.0.1",
     "express": "^4.17.1",
     "sloc": "^0.2.1",
     "source-map": "^0.7.3",
