--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "sloc": "^0.2.1",
     "source-map": "^0.7.3",
+    "typescript": "^4.3.4",
     "vue-parser": "^1.1.6"
   },
   "devDependencies": {
