--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gaborantal/js-callgraph",
-  "version": "1.3.2",
+  "name": "js-callgraph",
+  "version": "2.0.0",
   "description": "Builds static call graph for Javascript with a field-based algorithm.",
   "main": "index.js",
   "dependencies": {
