--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-callgraph",
-  "version": "2.0.0",
-  "description": "Builds static call graph for Javascript with a field-based algorithm.",
+  "name": "jscg",
+  "version": "2.0.4",
+  "description": "Builds static call graph for JavaScript with a field-based algorithm.",
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.14.6",
@@ -38,6 +38,11 @@
     "static analysis"
   ],
   "bin": {
-    "js-callgraph": "./js-callgraph.js"
-  }
+    "jscg": "./js-callgraph.js"
+  },
+  "files": [
+    "src/",
+    "index.js",
+    "js-callgraph.js"
+  ]
 }
