--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+          python-version: 3.7
       - run: npm ci
       - run: npm test
 
@@ -26,6 +27,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+          python-version: 3.7
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm publish
@@ -42,6 +44,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
+          python-version: 3.7
           node-version: 14
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
