--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
           python-version: 3.7
       - run: npm ci
       - run: npm test
@@ -27,8 +30,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          python-version: 3.7
           registry-url: https://registry.npmjs.org/
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
       - run: npm ci
       - run: npm publish
         env:
@@ -44,9 +50,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          python-version: 3.7
           node-version: 14
           registry-url: https://npm.pkg.github.com/
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
       - run: npm ci
       - run: npm publish
         env:
