--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "@typescript-eslint/typescript-estree": "^4.28.0",
     "argparse": "^2.0.1",
     "babel-core": "^6.26.3",
-    "typescript": "^4.3.4",
-    "vue-parser": "^1.1.6"
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "jest": "^27.0.5"
