--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@typescript-eslint/typescript-estree": "^4.28.0",
     "argparse": "^2.0.1",
     "babel-core": "^6.26.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "jest": "^27.0.5"
