Added null checks (#2)
* Added some null checks

* Minor fix

* Bump python version

* Travis fix

* Travis fix

* travis test

* Changing test script

Co-authored-by: Mosolygó <mbalazs@inf.u-szeged.hu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: node_js
+dist: bionic
 addons:
   apt:
     sources:
       - deadsnakes
-    packages:
-      - python3.7
 node_js:
   - 14
-before_install:
-  - python3.7 --version
 install:
   - npm install
 script:
